# gyango-ai

./: .gitignore  LICENSE.txt  NOTICE  README.md  build.gradle.kts  device_targeting_config.xml  gradle.properties  settings.gradle.kts
ai-pack-teacher-12gb/: build.gradle.kts
ai-pack-teacher-12gb/src/main/assets/models/: README.txt
ai-pack-teacher-3gb/: build.gradle.kts
ai-pack-teacher-3gb/src/main/assets/models/: README.txt
ai-pack-teacher-6gb/: build.gradle.kts
ai-pack-teacher-6gb/src/main/assets/models/: README.txt
app/: build.gradle.kts  gyango-upload-key.jks  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/aidl/ai/pocket/: IInferenceCallback.aidl  IInferenceService.aidl
app/src/main/assets/images/: README.txt
app/src/main/assets/licenses/: README.txt  THIRD_PARTY_OPEN_SOURCE.md
app/src/main/assets/models/: README.txt
app/src/main/java/ai/gyango/: GyangoApplication.kt  MainActivity.kt  MainPinLockViewModel.kt
app/src/main/java/ai/pocket/: InferenceService.kt  MainActivity.kt  PocketAIApplication.kt  ProcessTextActivity.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
docs/: prompt_markdown_contract_matrix.md
feature-chatbot/: build.gradle.kts
features/: README.txt
features/chatbot/: build.gradle.kts  consumer-rules.pro
features/chatbot/src/main/assets/chatbot_locales/: bn-IN.json  (+11 more)
gradle/: device.properties  emulator.properties  gradle-daemon-jvm.properties
gyango-core/: build.gradle.kts
gyango-litert-inference/: build.gradle.kts  proguard-rules.pro
gyango_pack_base_llm_0/: build.gradle.kts
gyango_pack_base_llm_1/: build.gradle.kts
gyango_pack_base_llm_2/: build.gradle.kts
gyango_pack_base_llm_3/: build.gradle.kts
gyango_pack_base_llm_4/: build.gradle.kts
gyango_pad_model_source/: README.txt
legal/: PRIVACY_POLICY.md  privacy-policy.html
pocket-api/: build.gradle.kts
pocket-core/: build.gradle.kts
pocket-models-gemma/: build.gradle.kts
pocket-models-llm/: build.gradle.kts
pocket-models-llm/src/main/cpp/: CMakeLists.txt  native_llm.cpp
pocket-orchestration/: build.gradle.kts
pocket-whisper/: build.gradle.kts
pocket-whisper/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
tools/: README.txt  convert_rwkv_blinkdl_pth_to_q4k.sh  generate_imatrix_data.py  llm_text_format.py
tools/android/: run-pad-emulator.sh  split-pad-base-model-into-packs.sh
tools/python/: llm_text_format.py
(+126 files in other folders)
